src/camera_control.rs


    /// 设置 GVCP 命令超时时间
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nMillisec` - 超时时间 (ms)，默认 500ms，范围：\[0, 10000\]
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以设置 GVCP 命令超时时间
    pub unsafe fn MV_GIGE_SetGvcpTimeout(handle: *mut c_void, nMillisec: c_uint) -> c_int;

    /// 获取 GVCP 命令超时时间
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pnMillisec` - 超时时间指针，以毫秒为单位（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口用于获取当前的 GVCP 超时时间
    pub unsafe fn MV_GIGE_GetGvcpTimeout(handle: *mut c_void, pnMillisec: *mut c_uint) -> c_int;

    /// 设置重传 GVCP 命令次数
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nRetryGvcpTimes` - 重传次数，范围：0-100
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口用于在 GVCP 包传输异常时，增加重传的次数，
    /// 在一定程度上可以避免设备掉线，范围为 0-100
    pub unsafe fn MV_GIGE_SetRetryGvcpTimes(handle: *mut c_void, nRetryGvcpTimes: c_uint) -> c_int;

    /// 获取重传 GVCP 命令次数
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pnRetryGvcpTimes` - 重传次数指针（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口用于获取当前的 GVCP 重传次数，默认 3 次
    pub unsafe fn MV_GIGE_GetRetryGvcpTimes(
        handle: *mut c_void,
        pnRetryGvcpTimes: *mut c_uint,
    ) -> c_int;

    /// 获取最佳的 packet size，该接口目前只支持 GigE 设备
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    ///
    /// # 返回值
    /// 最佳 packetsize
    ///
    /// # 注意事项
    /// 获取最佳的 packet size，对应 GigEVision 设备是 SCPS。
    /// 该接口需要在 MV_CC_OpenDevice 之后、MV_CC_StartGrabbing 之前调用。
    ///
    /// 该接口不支持 CameraLink 设备、U3V 设备。
    /// 该接口不支持 GenTL 设备（协议不支持），如果是 GenTL 方式添加的网口相机，
    /// 建议根据网络实际情况配置 GevSCPSPacketSize，或者配置 1500。
    pub unsafe fn MV_CC_GetOptimalPacketSize(handle: *mut c_void) -> c_int;

    /// 设置是否打开重发包支持，及重发包设置
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `bEnable` - 是否支持重发包
    /// * `nMaxResendPercent` - 最大重发比
    /// * `nResendTimeout` - 重发超时时间，范围：0-10000ms
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以设置重发包属性，仅 GigEVision 设备支持
    pub unsafe fn MV_GIGE_SetResend(
        handle: *mut c_void,
        bEnable: c_uint,
        nMaxResendPercent: c_uint,
        nResendTimeout: c_uint,
    ) -> c_int;

    /// 设置重传命令最大尝试次数
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nRetryTimes` - 重传命令最大尝试次数，默认 20
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口必须在调用 MV_GIGE_SetResend 开启重传包功能之后调用，否则失败且返回 MV_E_CALLORDER
    pub unsafe fn MV_GIGE_SetResendMaxRetryTimes(handle: *mut c_void, nRetryTimes: c_uint)
    -> c_int;

    /// 获取重传命令最大尝试次数
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pnRetryTimes` - 重传命令最大尝试次数（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口必须在调用 MV_GIGE_SetResend 开启重传包功能之后调用，否则失败且返回 MV_E_CALLORDER
    pub unsafe fn MV_GIGE_GetResendMaxRetryTimes(
        handle: *mut c_void,
        pnRetryTimes: *mut c_uint,
    ) -> c_int;

    /// 设置同一重传包多次请求之间的时间间隔
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nMillisec` - 同一重传包多次请求之间的时间间隔，默认 10ms
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口必须在调用 MV_GIGE_SetResend 开启重传包功能之后调用，否则失败且返回 MV_E_CALLORDER
    pub unsafe fn MV_GIGE_SetResendTimeInterval(handle: *mut c_void, nMillisec: c_uint) -> c_int;

    /// 获取同一重传包多次请求之间的时间间隔
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pnMillisec` - 同一重传包多次请求之间的时间间隔（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口必须在调用 MV_GIGE_SetResend 开启重传包功能之后调用，否则失败且返回 MV_E_CALLORDER
    pub unsafe fn MV_GIGE_GetResendTimeInterval(
        handle: *mut c_void,
        pnMillisec: *mut c_uint,
    ) -> c_int;

    /// 设置传输模式，可以为单播模式、组播模式等
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstTransmissionType` - 传输模式结构体
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 通过该接口可以设置传输模式为单播、组播等模式，仅 GigEVision 设备支持
    pub unsafe fn MV_GIGE_SetTransmissionType(
        handle: *mut c_void,
        pstTransmissionType: *mut crate::MV_TRANSMISSION_TYPE,
    ) -> c_int;

    /// 发出动作命令
    ///
    /// # 参数
    /// * `pstActionCmdInfo` - 动作命令信息
    /// * `pstActionCmdResults` - 动作命令返回信息列表（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 仅 GigEVision 设备支持
    pub unsafe fn MV_GIGE_IssueActionCommand(
        pstActionCmdInfo: *mut crate::MV_ACTION_CMD_INFO,
        pstActionCmdResults: *mut crate::MV_ACTION_CMD_RESULT_LIST,
    ) -> c_int;

    /// 获取组播状态
    ///
    /// # 参数
    /// * `pstDevInfo` - 设备信息结构体
    /// * `pbStatus` - 组播状态，true:组播状态，false:非组播（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口用于判断设备当前是否处于组播状态，解决客户端枚举时需要打开设备判断组播的问题。
    /// 仅支持标准 GigE Vision 设备
    pub unsafe fn MV_GIGE_GetMulticastStatus(
        pstDevInfo: *mut MV_CC_DEVICE_INFO,
        pbStatus: *mut bool,
    ) -> c_int;

    // ========================================================================
    // Part 8: 仅 CameraLink 设备支持的接口
    // ========================================================================

    /// 获取串口信息列表
    ///
    /// # 参数
    /// * `pstSerialPortList` - 串口信息列表（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口用于获取本地的串口信息。
    /// 该接口不支持 arm 和 Linux32 平台
    pub unsafe fn MV_CAML_GetSerialPortList(
        pstSerialPortList: *mut crate::MV_CAML_SERIAL_PORT_LIST,
    ) -> c_int;

    /// 设置取指定枚举串口
    ///
    /// # 参数
    /// * `pstSerialPortList` - 串口信息列表
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口用于设置枚举 CameraLink 设备的指定串口。
    /// 该接口不支持 arm 和 Linux32 平台
    pub unsafe fn MV_CAML_SetEnumSerialPorts(
        pstSerialPortList: *mut crate::MV_CAML_SERIAL_PORT_LIST,
    ) -> c_int;

    /// 设置设备波特率
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nBaudrate` - 设置的波特率值
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口支持在设备未连接时调用。
    /// 通过 GenTL 协议访问设备时，需要先连接设备，才能调用该接口。
    ///
    /// 因硬件/系统/外部干扰等因素，配置高波特率可能导致通信异常，
    /// 建议配置波特率最大小于 115200。
    ///
    /// 该接口不支持 arm 和 Linux32 平台
    pub unsafe fn MV_CAML_SetDeviceBaudrate(handle: *mut c_void, nBaudrate: c_uint) -> c_int;

    /// 获取设备波特率
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pnCurrentBaudrate` - 波特率信息指针（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口支持在设备未连接时调用。
    /// 该接口不支持 arm 和 Linux32 平台
    pub unsafe fn MV_CAML_GetDeviceBaudrate(
        handle: *mut c_void,
        pnCurrentBaudrate: *mut c_uint,
    ) -> c_int;

    /// 获取设备与主机间连接支持的波特率
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pnBaudrateAblity` - 支持的波特率信息的指针（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 所支持波特率的或运算结果，单个数值参考 CameraParams.h 中宏定义
    ///
    /// 该接口支持在设备未连接时调用。
    /// 该接口不支持 arm 和 Linux32 平台
    pub unsafe fn MV_CAML_GetSupportBaudrates(
        handle: *mut c_void,
        pnBaudrateAblity: *mut c_uint,
    ) -> c_int;

    /// 设置串口操作等待时长
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nMillisec` - 串口操作的等待时长，单位为 ms
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口不支持 arm 和 Linux32 平台
    pub unsafe fn MV_CAML_SetGenCPTimeOut(handle: *mut c_void, nMillisec: c_uint) -> c_int;

    // ========================================================================
    // Part 9: 仅 U3V 设备支持的接口
    // ========================================================================

    /// 设置 U3V 的传输包大小
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nTransferSize` - 传输的包大小，Byte，默认为 1M，范围：>=0x400
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 增加传输包大小可以适当降低取流时的 CPU 占用率。
    /// 但不同的 PC 和不同 USB 扩展卡存在不同的兼容性，
    /// 如果该参数设置过大可能会出现取不到图像的风险。
    pub unsafe fn MV_USB_SetTransferSize(handle: *mut c_void, nTransferSize: c_uint) -> c_int;

    /// 获取 U3V 的传输包大小
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pnTransferSize` - 传输的包大小指针，Byte（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口用于获取当前的 U3V 传输包大小，默认 1M
    pub unsafe fn MV_USB_GetTransferSize(handle: *mut c_void, pnTransferSize: *mut c_uint)
    -> c_int;

    /// 设置 U3V 的传输通道个数
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nTransferWays` - 传输通道个数，范围：1-10
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 用户可以根据 PC 的性能、设备出图帧率、图像大小和内存使用率等因素对该参数进行调节。
    /// 但不同的 PC 和不同的 USB 扩展卡存在不同的兼容性。
    pub unsafe fn MV_USB_SetTransferWays(handle: *mut c_void, nTransferWays: c_uint) -> c_int;

    /// 获取 U3V 的传输通道个数
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pnTransferWays` - 传输通道个数指针（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口用于获取当前的 U3V 异步取流节点个数，
    /// U 口相机传输通道个数和像素格式对应的负载包大小相关，
    /// 通过最大异步注册长度 / 像素格式对应的负载包大小 计算得出
    pub unsafe fn MV_USB_GetTransferWays(handle: *mut c_void, pnTransferWays: *mut c_uint)
    -> c_int;

    /// 注册流异常消息回调，在打开设备之后调用
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `cbException` - 异常回调函数指针
    /// * `pUser` - 用户自定义变量
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 只支持 U3V 相机，不支持 GenTL 设备
    pub unsafe fn MV_USB_RegisterStreamExceptionCallBack(
        handle: *mut c_void,
        cbException: unsafe extern "C" fn(crate::MV_CC_STREAM_EXCEPTION_TYPE, *mut c_void),
        pUser: *mut c_void,
    ) -> c_int;

    /// 设置 U3V 的事件缓存节点个数
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nEventNodeNum` - 事件缓存节点个数，范围：1-64
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口用于设置当前的 U3V 事件缓存节点个数，默认情况下为 5 个
    pub unsafe fn MV_USB_SetEventNodeNum(handle: *mut c_void, nEventNodeNum: c_uint) -> c_int;

    /// 设置 U3V 的同步读写超时时间，范围为:[1000, UINT_MAX)
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nMills` - 设置同步读写超时时间，默认时间为 1000ms
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 增加设置同步读取时间接口，兼容部分相机配置参数很慢，超过 1000ms 的情况
    pub unsafe fn MV_USB_SetSyncTimeOut(handle: *mut c_void, nMills: c_uint) -> c_int;

    /// 获取 U3V 相机同步读写超时时间
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pnMills` - 获取的超时时间 (ms)（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口用于获取当前的 U3V 同步读写超时时间大小，默认 1000ms
    pub unsafe fn MV_USB_GetSyncTimeOut(handle: *mut c_void, pnMills: *mut c_uint) -> c_int;

    // ========================================================================
    // Part 10: GenTL 相关接口
    // ========================================================================

    /// 通过 GenTL 枚举 Interfaces
    ///
    /// # 参数
    /// * `pstIFList` - Interfaces 列表（输出参数）
    /// * `strGenTLPath` - GenTL 的 cti 文件路径
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// Interfaces 列表的内存是在 SDK 内部分配的，多线程调用该接口时会进行设备列表内存的释放和申请，
    /// 建议尽量避免多线程枚举操作。
    ///
    /// 暂不支持工业相机 SDK 直接调用 MvProducerU3V.cti 和 MvProducerGEV.cti，
    /// 支持调用其他.cti
    pub unsafe fn MV_CC_EnumInterfacesByGenTL(
        pstIFList: *mut crate::MV_GENTL_IF_INFO_LIST,
        strGenTLPath: *const c_char,
    ) -> c_int;

    /// 卸载 cti 库
    ///
    /// # 参数
    /// * `pGenTLPath` - 枚举卡时加载的 cti 文件路径
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 卸载前需要保证通过该 cti 枚举出的相机已全部关闭，否则报错前置条件错误
    pub unsafe fn MV_CC_UnloadGenTLLibrary(pGenTLPath: *const c_char) -> c_int;
